fixe picture profile displayed
